updating config to be json

--- a/bot.config
+++ b/bot.config
@@ -1,5 +1,6 @@
-SLACK_BOT_TOKEN
-SLACK_BOT_USER
-INSTRUCTION
-...
-INSTRUCTION
+{
+    "bot_name": "PLACE BOT NAME HERE",
+    "bot_token": "PLACE BOT TOKEN HERE",
+    "bot_logging_channel": "botlogging",
+    "bot_alias": "ss"
+}
