adding maximize_windows feature

--- a/bot.config
+++ b/bot.config
@@ -2,5 +2,6 @@
     "bot_name": "PLACE BOT NAME HERE",
     "bot_token": "PLACE BOT TOKEN HERE",
     "bot_logging_channel": "botlogging",
-    "bot_alias": "ss"
+    "bot_alias": "ss",
+    "maximize_windows": false
 }
