interpolated keys for onscreenkeyboard

--- a/bot.config
+++ b/bot.config
@@ -3,5 +3,6 @@
     "bot_token": "PLACE BOT TOKEN HERE",
     "bot_logging_channel": "botlogging",
     "bot_alias": "ss",
-    "maximize_windows": false
+    "maximize_windows": false,
+    "keys_mode": "config"
 }
