adding pre interpolate clicks and up botton and renamed cmd type

--- a/src/Services/keys/keyboard.config
+++ b/src/Services/keys/keyboard.config
@@ -226,6 +226,11 @@
             "key": "space",
             "loc_x": 677,
             "loc_y": 461
+        },
+		{
+            "key": "up",
+            "loc_x": 1166,
+            "loc_y": 361
         }
     ]
 }
