--- a/bot.config
+++ b/bot.config
@@ -5,4 +5,7 @@
     "bot_alias": "ss",
     "maximize_windows": false,
     "keys_mode": "config"
+    "interpolate_clicks":true,
+    "use_mss":false,
+    "use_image_thread":true
 }
